# bodega

./: .env.example  .gitignore  plan.md
environment/: README.md  pyproject.toml  smoke_test.py
environment/bodega_env/: __init__.py  bodega_env.py  parser.py  reward_funcs.py  rubric.py  verify_client.py
environment/bodega_env/data/seed/: catalog-seed-A.json
environment/bodega_env/data/splits/: eval.jsonl
environment/outputs/evals/bodega-env--gpt-4.1-mini/90b83bf1/: metadata.json  results.jsonl
environment/outputs/evals/bodega-env--gpt-4.1-mini/b41f80ed/: metadata.json  results.jsonl
environment/outputs/evals/bodega-env--gpt-4.1-mini/bde803be/: metadata.json  results.jsonl
environment/outputs/evals/bodega-env--gpt-4.1-mini/bf177f47/: metadata.json  results.jsonl
environment/outputs/evals/bodega-env--gpt-4.1-mini/e7f76b7c/: metadata.json  results.jsonl
environment/tests/: test_rubric_parser.py  test_rubric_taskgen_consistency.py  test_rubric_wiring.py
oracle/: solve.py
storefront/: Dockerfile  docker-compose.yml  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
storefront/app/: components.tsx  globals.css  layout.tsx  page.tsx
storefront/lib/: cart.ts  catalog.ts  mutation.ts  order.ts  session.ts
storefront/prisma/: schema.prisma  seed.mjs
storefront/seed/: catalog-seed-B.json  generate_catalog.py
storefront/tests/: test_catalog.py  test_storefront.py  test_verify_checkout.py
taskgen/: common.py  dedup_check.py  generate.py  make_splits.py  phrasing.py  solver.py
taskgen/splits/: eval-ood.jsonl  (+3 more)
(+30 files in other folders)
