[project]
name = "bodega-env"
version = "0.1.0"
description = "Bodega — state-verified rewards for browser shopping agents (DOM + CUA)"
requires-python = ">=3.10"
dependencies = [
    "verifiers[browser]>=0.1.10",
    "httpx>=0.27",
    "datasets>=2.19",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bodega_env"]

# verifiers Hub entry point
[tool.verifiers]
module = "bodega_env.bodega_env"
